# operon-searcher

./: README.md  pyproject.toml  requirements.txt  test.py
GCF_000017005.1/: genomic.gff
Genbank_GCF_000017005.1/: GCF_000017005.1_ASM1700v1_genomic.fna
Leuconostoc_citreum/Genbank_GCA_000026405.1/: GCA_000026405.1_ASM2640v1_genomic.fna  fimo.gff  genomic.gff
Leuconostoc_citreum/RefSeq_GCF_000026405.1/: GCF_000026405.1_ASM2640v1_genomic.fna  fimo.gff  genomic.gff
RefSeq_GCA_000017005.1/: fimo.gff  genomic.gff
Streptococcus_gordonii/Genbank_GCF_000017005.1/: fimo.gff
operon_searcher/: cli.py  gene.py  lib.py  searcher.py  tf.py  visualize.py  visualizer.py
output/: operons.json
src/operon_searcher/: __main__.py  cli.py  lib.py  searcher.py  visualizer.py
