[project]
name = "operon-searcher"
version = "1.0.0"
description = "operon searcher tool"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}

[project.scripts]  # Optional
operon_searcher = "operon_searcher"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
