[project]
name = "operon-searcher"
version = "3.0.0"
description = "operon searcher tool"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "dna_features_viewer==3.1.2",
    "typer[all]==0.9.0",
    "click==8.1.7",
    "rich==13.4.2"
]

[project.scripts]  # Optional
operon_searcher = "operon_searcher:main"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
